compiler/testData/cli/jvm/diagnosticTests/diagnosticsOrder.out
compiler/testData/cli/jvm/diagnosticTests/diagnosticsOrder1.kt:1:5: error: conflicting declarations:
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x = 5
    ^
compiler/testData/cli/jvm/diagnosticTests/diagnosticsOrder1.kt:2:5: error: conflicting declarations:
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x = 5
    ^
compiler/testData/cli/jvm/diagnosticTests/diagnosticsOrder1.kt:3:5: error: conflicting declarations:
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x = 5
    ^
compiler/testData/cli/jvm/diagnosticTests/diagnosticsOrder1.kt:4:5: error: conflicting declarations:
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x = 5
    ^
compiler/testData/cli/jvm/diagnosticTests/diagnosticsOrder1.kt:5:5: error: conflicting declarations:
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x = 5
    ^
compiler/testData/cli/jvm/diagnosticTests/diagnosticsOrder1.kt:6:5: error: conflicting declarations:
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x = 5
    ^
compiler/testData/cli/jvm/diagnosticTests/diagnosticsOrder1.kt:7:5: error: conflicting declarations:
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x: Int
val x = 5
    ^
compiler/testData/cli/jvm/diagnosticTests/diagnosticsOrder2.kt:1:5: error: conflicting declarations:
val y: Int
val y = 5
    ^
compiler/testData/cli/jvm/diagnosticTests/diagnosticsOrder2.kt:2:5: error: conflicting declarations:
val y: Int
val y = 5
    ^
COMPILATION_ERROR
